--- a/frontend/todo-frontend/src/Styles/Home.css
+++ b/frontend/todo-frontend/src/Styles/Home.css
@@ -1,6 +1,7 @@
 .home-container {
     text-align: center;
     padding: 50px;
+    margin-left: 320px;
   }
   
   .home-container h1 {
@@ -23,13 +24,13 @@
     padding: 10px 20px;
     font-size: 1rem;
     border: none;
-    background-color: #007bff;
+    background-color: gray;
     color: white;
     border-radius: 5px;
     cursor: pointer;
   }
   
   .home-btn:hover {
-    background-color: #0056b3;
+    background-color: darkgray;
   }
   
