--- a/frontend/todo-frontend/src/Styles/Chatbot.css
+++ b/frontend/todo-frontend/src/Styles/Chatbot.css
@@ -1,5 +1,5 @@
 .chatbot-container {
-    width: 360px;
+    width:100%;
     margin: 70px auto;
     padding: 20px;
     background-color: #f9f9f9;
@@ -8,7 +8,7 @@
 }
 
 .chatbox {
-    height: 300px;
+    height: 400px;
     overflow-y: scroll;
     padding: 10px;
     border: 1px solid #ccc;
