--- a/frontend/todo-frontend/src/Styles/Auth.css
+++ b/frontend/todo-frontend/src/Styles/Auth.css
@@ -123,8 +123,8 @@ body {
 body::after {
   content: '';
   position: absolute;
-  bottom: -20px;
-  right: 10px;
+  bottom: -3%;
+  right: 0%;
   width: 200px;
   height: 150px;
   background: url('../Images/panther-bw.png') no-repeat center center;
