--- a/frontend/todo-frontend/src/Styles/Chatbot.css
+++ b/frontend/todo-frontend/src/Styles/Chatbot.css
@@ -1,19 +1,26 @@
 .chatbot-container {
-    width:100%;
-    margin: 70px auto;
+    width: 100%;
+    /* margin: 70px auto; */
     padding: 20px;
-    background-color: #f9f9f9;
+    height: 100%;
+    /* background-color: #f9f9f9; */
+    background-color: #FDFDF8;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index:99;
 }
 
 .chatbox {
-    height: 400px;
+    height: 90%;
     overflow-y: scroll;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 0.5px solid #ccc;
     margin-bottom: 10px;
-    margin-top:10px;
+    margin-top: 10px;
+    z-index:99;
 }
 
 .message {
@@ -21,6 +28,7 @@
     margin: 5px 0;
     border-radius: 8px;
     max-width: 80%;
+    /* margin-top:60px; */
 }
 
 .audio-message {
@@ -45,7 +53,7 @@
 
 /* Record Button Style */
 .record-btn {
-    background-color: gray ;
+    background-color: gray;
     padding: 10px;
     border: none;
     border-radius: 50% !important;
@@ -55,7 +63,7 @@
     justify-content: center;
     width: 40px;
     height: 40px;
-    margin-left: 140px;
+    margin-left: 46%;
     position: relative;
     transition: background-color 0.3s ease;
 }
@@ -75,9 +83,11 @@
     0% {
         transform: scale(1);
     }
+
     50% {
         transform: scale(1.2);
     }
+
     100% {
         transform: scale(1);
     }
@@ -88,3 +98,35 @@
     justify-content: flex-end;
 }
 
+.loading-dots {
+    display: inline-block;
+    font-size: 20px; /* Size of the dots */
+    line-height: 0;  /* Remove extra space around dots */
+  }
+  
+  .loading-dots span {
+    display: inline-block;
+    margin: 0 3px;
+    opacity: 0;
+    font-weight: bolder;
+    animation: dot-blink 1.5s infinite;
+  }
+  
+  .loading-dots span:nth-child(1) {
+    animation-delay: 0s;
+  }
+  
+  .loading-dots span:nth-child(2) {
+    animation-delay: 0.4s;
+  }
+  
+  .loading-dots span:nth-child(3) {
+    animation-delay: 0.7s;
+  }
+  
+  @keyframes dot-blink {
+    0% { opacity: 0; }
+    50% { opacity: 1; }
+    100% { opacity: 0; }
+  }
+  
