--- a/frontend/todo-frontend/src/Styles/Auth.css
+++ b/frontend/todo-frontend/src/Styles/Auth.css
@@ -21,7 +21,8 @@ body {
 /* Auth Container */
 .auth-container {
   width: 400px;
-  margin: 50px 530px;
+  /* margin: 50px 530px; */
+  margin: 50% 138%;
   padding: 30px;
   background-color: rgba(255, 255, 255, 0.85); /* Slightly transparent white */
   border-radius: 20px;
